--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -16,7 +16,7 @@ html {
                 margin: 0 auto;
             }
 
-            div {
+            .pf-treat {
                 width: 100%;
                 height: 16vw;
                 display: flex;
@@ -25,10 +25,6 @@ html {
                 left: 50%;
                 transform: translate(-50%, 50%);
                 z-index: 1;
-
-                img {
-                    height: 100%;
-                }
             }
         }
 
@@ -62,7 +58,246 @@ html {
 
                 p {
                     margin-top: 10px;
-                    font-size: 16px;
+                    @include font-l;
+                }
+            }
+
+            .pf-detail {
+                padding-bottom: 80px;
+                margin-top: 90px;
+
+                article {
+                    margin-top: 160px;
+
+                    .catchcopy {
+                        @include font-ll;
+                        color: $navy;
+                        text-align: center;
+                    }
+
+                    .con {
+                        width: 91.5vw;
+                        border-radius: 100px 100px 12px 12px;
+                        background-color: $white;
+                        padding-bottom: 40px;
+                        margin: 0 auto;
+
+                        h2 {
+                            padding-top: 64px;
+                            @include font-ll;
+                            text-align: center;
+                        }
+
+                        p:nth-of-type(1) {
+                            width: 78.7vw;
+                            margin: 16px auto 0 auto;
+                        }
+
+                        .pf-price {
+                            width: 78.7vw;
+                            margin: 16px auto 0 auto;
+
+                            span {
+                                font-family: $font2;
+                                @include font-ll;
+                                font-weight: 600;
+                            }
+                        }
+
+                        .pf-cta {
+                            @include cta1;
+                        }
+                    }
+                }
+
+                article:nth-of-type(1) {
+                    margin-top: 0;
+                }
+            }
+
+            .pf-recommend {
+                background-color: $white;
+                padding-top: 80px;
+
+                * {
+                    font-family: $font2;
+                }
+
+                h2 {
+                    padding-left: 16px;
+                    font-size: 24px;
+                    font-weight: 700;
+                    color: $black;
+                }
+
+                ul {
+                    width: calc(100% - 32px);
+                    margin: 40px auto 0 auto;
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    li {
+                        width: calc(50% - 8px);
+                        margin-top: 40px;
+
+                        a {
+                            display: block;
+                            color: $black;
+
+                            h3 {
+                                padding-top: 3px;
+                            }
+                        }
+                    }
+
+                    li:nth-of-type(even) {
+                        margin-left: 16px;
+                    }
+
+                    li:nth-of-type(1), li:nth-of-type(2) {
+                        margin-top: 0;
+                    }
+                }
+
+                .pf-cta {
+                    @include cta2;
+                }
+            }
+
+            .pf-recommend:nth-last-of-type(1) {
+                padding: 100px 0;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+
+    * {
+        font-size: 16px;
+    }
+
+    .pf-sp {
+        display: none !important;
+    }
+
+    .pf-pc {
+        display: block !important;
+    }
+    
+    html {
+
+        body {
+
+            .pf-fv {
+                height: 46.9vw;
+                background-image: url('https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/responsive/fv_bg.jpg');
+
+                h1 {
+                    width: 46.9vw;
+                    padding-top: 0;
+                    position: absolute;
+                    top: 50%;
+                    left: 40px;
+                    transform: translateY(-50%);
+                }
+
+                .pf-treat {
+                    height: 6.3vw;
+                }
+            }
+
+            .pf_main {
+
+                .pf-epilogue {
+                    height: 53vw;
+
+                    img {
+                        width: 63vw;
+                    }
+
+                    h2 {
+                        padding-top: 175px;
+                        font-size: 32px;
+                    }
+
+                    p {
+                        @include font-l-pc;
+                    }
+                }
+
+                .pf-detail {
+                    padding-bottom: 100px;
+
+                    article {
+
+                        .con {
+                            width: 35.9vw;
+
+                            h2 {
+                                width: 29.7vw;
+                                margin: 0 auto;
+                                @include font-ll-pc;
+                                text-align: initial; 
+                            }
+
+                            p:nth-of-type(1) {
+                                width: 29.7vw;
+                            }
+    
+                            .pf-price {
+                                width: 29.7vw;
+    
+                                span {
+                                    @include font-ll-pc;
+                                }
+                            }
+
+                            .pf-cta {
+                                @include cta1-pc;
+                            }
+                        }
+                    }
+                }
+
+                .pf-recommend {
+
+                    h2 {
+                        padding-left: 160px;
+                        font-size: 28px;
+                    }
+
+                    ul {
+                        width: calc(100% - 320px);
+
+                        li {
+                            width: calc((100% - (16px * 5)) / 6);
+                            margin: 0 0 0 16px;
+                        }
+
+                        li:nth-of-type(even) {
+                            margin-left: 16px;
+                        }
+    
+                        li:nth-of-type(1) {
+                            margin-left: 0;
+                        }
+                    }
+
+                    .pf-cta {
+                        @include cta2-pc;
+                    }
+                }
+
+                .pf-lp {
+                    padding-top: 100px;
+
+                    ul {
+
+                        li {
+                            width: calc((100% - (16px * 3)) / 4);
+                        }
+                    }
                 }
             }
         }
