--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -5,14 +5,14 @@ html {
     body {
         
         .pf-fv {
-            height: 100vw;
-            background-image: url('https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_bg.jpg');
+            height: 125.1vw;
+            background-image: url('https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/fv_bg_re.jpg');
             @include bg;
             position: relative;
 
             h1 {
                 width: 69.3vw;
-                padding-top: 19px;
+                padding-top: 20px;
                 margin: 0 auto;
             }
 
@@ -65,53 +65,163 @@ html {
             .pf-detail {
                 padding-bottom: 80px;
                 margin-top: 90px;
+                overflow-x: hidden;
 
                 article {
-                    margin-top: 160px;
+                    margin-top: 176px;
 
                     .catchcopy {
+                        margin: 0 auto;
+                        @include center;
                         @include font-ll;
                         color: $navy;
                         text-align: center;
+
+                        span {
+                            display: block;
+                            width: 35px;
+                            margin-right: 4px;
+                        }
+
+                        span:nth-of-type(2) {
+                            transform: translateY(-7.5px) rotate(180deg);
+                        }
                     }
 
                     .con {
-                        width: 91.5vw;
-                        border-radius: 100px 100px 12px 12px;
-                        background-color: $white;
-                        padding-bottom: 40px;
-                        margin: 0 auto;
+                        position: relative;
+                    }
+
+                    .con:nth-of-type(1) {
+                        width: 100%;
+                        height: 80vw;
+                        margin-top: 24px;
+                        z-index: 1;
+
+                        .bg {
+                            height: 100%;
+                            @include absolute;
+                            z-index: 0;
+                        }
+
+                        .treat1 {
+                            width: 39.7vw;
+                            position: absolute;
+                            top: 16px;
+                            left: -16px;
+                            z-index: 1;
+                        }
+                    }
+
+                    .con:nth-of-type(2) {
+                        margin-top: 16px;
 
                         h2 {
-                            padding-top: 64px;
+                            padding-left: 16px;
                             @include font-ll;
-                            text-align: center;
                         }
 
                         p:nth-of-type(1) {
-                            width: 78.7vw;
-                            margin: 16px auto 0 auto;
+                            width: calc(100% - 32px);
+                            border-top: dashed 1px $grey;
+                            padding-top: 12px;
+                            margin: 12px auto 0 auto;
                         }
 
                         .pf-price {
-                            width: 78.7vw;
-                            margin: 16px auto 0 auto;
+                            width: calc(100% - 32px);
+                            margin: 12px auto 0 auto;
+                            display: flex;
+                            justify-content: right;
+                            align-items: end;
+                            font-family: $font3;
+                            font-size: 28px;
+                            font-weight: 900;
 
                             span {
-                                font-family: $font2;
-                                @include font-ll;
-                                font-weight: 600;
+                                @include font-l;
+                                transform: translateY(-2.5px);
+                            }
+
+                            span:nth-of-type(1) {
+                                margin-right: 7px;
+                            }
+
+                            span:nth-of-type(2) {
+                                margin-left: 8px;
                             }
                         }
 
                         .pf-cta {
                             @include cta1;
+                            margin-top: 12px;
+                            z-index: 1;
+                        }
+
+                        .treat2 {
+                            width: 101.9vw;
+                            position: absolute;
+                            left: 10.7vw;
+                            bottom: 0;
+                            transform: translateY(56px);
+                            opacity: .15;
+                            z-index: 0;
                         }
                     }
                 }
 
                 article:nth-of-type(1) {
                     margin-top: 0;
+                }
+
+                article:nth-of-type(2) {
+                    
+                    .con:nth-of-type(2) {
+
+                        .treat2 {
+                            width: 138.9vw;
+                        }
+                    }
+                }
+
+                article:nth-of-type(3) {
+                    
+                    .con:nth-of-type(2) {
+
+                        .treat2 {
+                            width: 98.7vw;
+                        }
+                    }
+                }
+
+                article:nth-of-type(4) {
+                    
+                    .con:nth-of-type(2) {
+
+                        .treat2 {
+                            width: 126.4vw;
+                        }
+                    }
+                }
+
+                article:nth-of-type(5) {
+                    
+                    .con:nth-of-type(2) {
+
+                        .treat2 {
+                            width: 116vw;
+                        }
+                    }
+                }
+
+                article:nth-of-type(6) {
+                    
+                    .con:nth-of-type(2) {
+
+                        .treat2 {
+                            width: 121vw;
+                        }
+                    }
                 }
             }
 
@@ -191,7 +301,7 @@ html {
 
             .pf-fv {
                 height: 46.9vw;
-                background-image: url('https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/responsive/fv_bg.jpg');
+                background-image: url('https://gigaplus.makeshop.jp/kitanoace/15_premiumfurikake/assets/img/responsive/fv_bg_re.jpg');
 
                 h1 {
                     width: 46.9vw;
@@ -231,30 +341,77 @@ html {
 
                     article {
 
-                        .con {
-                            width: 35.9vw;
+                        .catchcopy {
+                            @include font-ll-pc;
 
-                            h2 {
-                                width: 29.7vw;
-                                margin: 0 auto;
-                                @include font-ll-pc;
-                                text-align: initial; 
+                            span {
+                                width: 46px;
+                                margin-right: 8px;
                             }
+                        }
 
-                            p:nth-of-type(1) {
-                                width: 29.7vw;
-                            }
-    
-                            .pf-price {
-                                width: 29.7vw;
-    
-                                span {
-                                    @include font-ll-pc;
+                        .container {
+                            width: 75vw;
+                            height: 31.3vw;
+                            margin: 24px auto 0 auto;
+                            display: flex;
+                            align-items: center;
+
+                            .con:nth-of-type(1) {
+                                width: 52.1%;
+                                height: 100%;
+                                margin-top: 0;
+
+                                .bg {
+                                    width: 100%;
+                                }
+
+                                .treat1 {
+                                    width: 14.1vw;
+                                    top: 20px;
+                                    left: -20px;
                                 }
                             }
 
-                            .pf-cta {
-                                @include cta1-pc;
+                            .con:nth-of-type(2) {
+                                width: calc(47.9% - 40px);
+                                margin-top: 0;
+                                margin-left: 40px;
+
+                                h2 {
+                                    padding-left: 0;
+                                    @include font-ll-pc;
+                                }
+
+                                p:nth-of-type(1) {
+                                    width: 100%;
+                                    padding-top: 16px;
+                                    margin: 16px 0 0 0;
+                                }
+
+                                .pf-price {
+                                    width: 100%;
+                                    margin: 16px 0 0 0;
+                                    
+                                    span {
+                                        @include font-m-pc;
+                                    }
+
+                                    span:nth-of-type(1) {
+                                        margin-right: 8px;
+                                    }
+                                }
+
+                                .pf-cta {
+                                    @include cta1-pc;
+                                    margin-top: 16px;
+                                }
+
+                                .treat2 {
+                                    width: 35.9vw;
+                                    left: 6.3vw;
+                                    transform: translateY(104px);
+                                }
                             }
                         }
                     }
