--- a/assets/css/scss/base.scss
+++ b/assets/css/scss/base.scss
@@ -100,6 +100,7 @@ img {
     @include font-l;
     color: $white;
     position: relative;
+    transition-duration: .3s;
 
     &::after {
         content: '';
@@ -107,6 +108,10 @@ img {
         height: calc(100% - 8px);
         border: solid 1px $white;
         @include absolute-center;
+    }
+
+    &:hover {
+        transform: scale(1.05,1.05);
     }
 }
 
@@ -130,8 +135,54 @@ img {
 @mixin cta1-pc {
     width: 100%;
     @include font-l-pc;
+
+    &:active {
+        transform: scale(1.1,1.1);
+    }
 }
 
 @mixin cta2-pc {
     width: 22.8vw;
+}
+
+.fadein {
+    opacity: 0;
+    animation: fadein 1s .5s cubic-bezier(0.33, 1, 0.68, 1) forwards;
+
+    @keyframes fadein {
+    
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+}
+
+.fadeup {
+    opacity: 0;
+    transform: translateY(30px);    
+}
+
+.fadeup-on {
+    animation: fadeup 1s cubic-bezier(0.33, 1, 0.68, 1) forwards;
+
+    @keyframes fadeup {
+        
+        0% {
+            transform: translateY(30px);
+            opacity: 0;
+        }
+            
+        80% {
+            opacity: 1;
+        }
+            
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
 }
