--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -69,10 +69,11 @@ html {
             .pf-detail {
                 padding-bottom: 80px;
                 margin-top: 90px;
-                overflow-x: hidden;
 
                 article {
-                    margin-top: 176px;
+                    padding-bottom: 60px;
+                    margin-top: 116px;
+                    overflow-x: hidden;
 
                     .catchcopy {
                         margin: 0 auto;
@@ -351,6 +352,9 @@ html {
                     padding-bottom: 100px;
 
                     article {
+                        padding-bottom: 0;
+                        margin-top: 176px;
+                        overflow-x: initial;
 
                         .catchcopy {
                             @include font-ll-pc;
